<resources>
    <string name="app_name">Programatorus</string>
    <string name="action_settings">Settings</string>
<!-- Strings used for fragments navigation -->
    <string name="choose_device_fragment_label">Choose Device</string>
    <string name="manage_boards_fragment_label">Manage Boards</string>
    <string name="manage_firmwares_fragment_label">Manage Firmware</string>
    <string name="upload_file_fragment_label">Upload File</string>
    <string name="home_fragment_label">Home</string>
    <string name="flash_request_fragment_label">Choose Configuration</string>
    <string name="flash_result_fragment_label">Flash Result</string>
    <string name="debugger_fragment_label">Debugger</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

<!--    Choose Device-->
    <string name="paired_devices">Paired devices</string>
    <string name="discovered_devices">Discovered devices</string>
    <string name="discover_button">Start discovery</string>

<!--    Home -->
    <string name="manage_boards">Boards list</string>
    <string name="manage_firmware">Firmware list</string>
    <string name="upload_file">Upload / Delete firmware</string>
    <string name="flash_request">Program / Debug</string>
    <string name="debugger">Debugger</string>


<!--    Choose Device-->
    <string name="choose_file_to_upload">Upload File</string>


    <string name="submit_flash">Flash Request</string>
    <string name="select_board_message">Select file corresponding to the model of the board you want to use</string>
    <string name="selected_board">Selected Board\n %1$s</string>
    <string name="select_firmware_message">Select firmware file you want to use in configuration</string>
    <string name="selected_firmware">Selected Firmware\n %1$s</string>

    <string name="selected_board_alert">Choose board file</string>
    <string name="selected_firmware_alert">Choose firmware file</string>

    <string name="placeholder_selection">[ NONE ]</string>

    <string name="select_firmware_to_upload">Use button below to upload firmware files to remote device</string>
    <string name="select_firmware_to_delete">You can delete firmware files from remote device using list below</string>

    <string name="delete_file_title">Delete File</string>
    <string name="delete_file_text">Are you sure you want to permanently delete file \"%1$s\" from remote Raspberry Pi?</string>

    <string name="send_gdb_command">Send</string>
    <string name="start_debugger">Start Debugger</string>


</resources>