<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.choosedevice.ChooseDeviceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paired_devices_title"
                android:text="@string/paired_devices"
                android:textSize="32sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <programatorus.client.screens.choosedevice.devicelist.DeviceListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paired_devices"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/discovered_devices_title"
                android:text="@string/discovered_devices"
                android:textSize="32sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <programatorus.client.screens.choosedevice.devicelist.DeviceListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/discovered_devices"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discover_button"
                android:id="@+id/discovery"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>